fix: es5 build and z-index

--- a/src/components/joy-con/joy-con.css
+++ b/src/components/joy-con/joy-con.css
@@ -2,4 +2,5 @@
   position: fixed;
   top: 1em;
   right: 1em;
+  z-index: 10;
 }
